[PNPG-239] feat: added tag internal-pnpg to POST /users API
